--- a/FloatingActionButton/FloatingActionButton/Diary.storyboard
+++ b/FloatingActionButton/FloatingActionButton/Diary.storyboard
@@ -72,68 +72,74 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m6U-bl-Uee">
-                                <rect key="frame" x="160" y="204" width="70" height="77"/>
+                                <rect key="frame" x="160" y="204" width="70" height="73"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="smiley.fill" catalog="system" imagePlacement="top" title="좋아" imagePadding="10">
+                                <buttonConfiguration key="configuration" style="plain" image="smiley.fill" catalog="system" imagePlacement="top" title="좋아" imagePadding="5">
                                     <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="30"/>
+                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="15"/>
                                 </buttonConfiguration>
                                 <connections>
                                     <action selector="selectEmoButtonTapped:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="53e-fk-eCr"/>
                                 </connections>
                             </button>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="lEe-0D-z1v">
-                                <rect key="frame" x="20" y="291" width="350" height="0.0"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="lEe-0D-z1v">
+                                <rect key="frame" x="20" y="287" width="350" height="0.0"/>
                                 <subviews>
                                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yTr-y2-G48">
-                                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="77"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="64.333333333333329"/>
                                         <color key="tintColor" systemColor="systemYellowColor"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" image="smiley.fill" catalog="system" imagePlacement="top" title="좋아" imagePadding="10">
-                                            <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="30"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="smiley.fill" catalog="system" imagePlacement="top" title="좋아" imagePadding="5">
+                                            <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="25"/>
+                                            <fontDescription key="titleFontDescription" type="boldSystem" pointSize="13"/>
                                         </buttonConfiguration>
                                         <connections>
                                             <action selector="happyTapped:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="2AG-Kx-Trp"/>
                                         </connections>
                                     </button>
                                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oFj-aZ-VMN">
-                                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="77"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="64.333333333333329"/>
                                         <color key="tintColor" systemColor="systemGreenColor"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" image="smiley.fill" catalog="system" imagePlacement="top" title="평온" imagePadding="10">
-                                            <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="30"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="smiley.fill" catalog="system" imagePlacement="top" title="평온" imagePadding="5">
+                                            <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="25"/>
+                                            <fontDescription key="titleFontDescription" type="boldSystem" pointSize="13"/>
                                         </buttonConfiguration>
                                         <connections>
                                             <action selector="normalTapped:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="NTm-v1-hrA"/>
                                         </connections>
                                     </button>
                                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kgZ-7B-LvE">
-                                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="77"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="64.333333333333329"/>
                                         <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" image="smiley.fill" catalog="system" imagePlacement="top" title="피곤" imagePadding="10">
-                                            <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="30"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="smiley.fill" catalog="system" imagePlacement="top" title="피곤" imagePadding="5">
+                                            <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="25"/>
+                                            <fontDescription key="titleFontDescription" type="boldSystem" pointSize="13"/>
                                         </buttonConfiguration>
                                         <connections>
                                             <action selector="tiredTapped:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="MgP-pw-cSa"/>
                                         </connections>
                                     </button>
                                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DYq-Ra-Gqt">
-                                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="77"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="64.333333333333329"/>
                                         <color key="tintColor" systemColor="systemRedColor"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" image="smiley.fill" catalog="system" imagePlacement="top" title="짜증" imagePadding="10">
-                                            <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="30"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="smiley.fill" catalog="system" imagePlacement="top" title="짜증" imagePadding="5">
+                                            <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="25"/>
+                                            <fontDescription key="titleFontDescription" type="boldSystem" pointSize="13"/>
                                         </buttonConfiguration>
                                         <connections>
                                             <action selector="annoyTapped:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="jHE-Ce-kku"/>
                                         </connections>
                                     </button>
                                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MdH-VG-0Ko">
-                                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="77"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="64.333333333333329"/>
                                         <color key="tintColor" systemColor="systemBlueColor"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" image="smiley.fill" catalog="system" imagePlacement="top" title="슬퍼" imagePadding="10">
-                                            <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="30"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="smiley.fill" catalog="system" imagePlacement="top" title="슬퍼" imagePadding="5">
+                                            <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="25"/>
+                                            <fontDescription key="titleFontDescription" type="boldSystem" pointSize="13"/>
                                         </buttonConfiguration>
                                         <connections>
                                             <action selector="sadTapped:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="os9-RP-4Bn"/>
@@ -142,7 +148,7 @@
                                 </subviews>
                             </stackView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="4Al-Ae-DVs">
-                                <rect key="frame" x="20" y="310" width="350" height="200"/>
+                                <rect key="frame" x="20" y="340" width="350" height="200"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="Ihe-qn-Nc2"/>
@@ -158,7 +164,7 @@
                             <constraint firstItem="4Al-Ae-DVs" firstAttribute="trailing" secondItem="uec-Uy-11g" secondAttribute="trailing" id="0M5-0H-v8C"/>
                             <constraint firstItem="iMz-N5-nD6" firstAttribute="top" secondItem="ZiM-eh-7Jl" secondAttribute="top" id="6ZU-5j-LiQ"/>
                             <constraint firstItem="lEe-0D-z1v" firstAttribute="trailing" secondItem="uec-Uy-11g" secondAttribute="trailing" id="74y-uP-8dS"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="4Al-Ae-DVs" secondAttribute="bottom" constant="300" id="8cp-Ua-Ec9"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="4Al-Ae-DVs" secondAttribute="bottom" constant="270" id="8cp-Ua-Ec9"/>
                             <constraint firstItem="m6U-bl-Uee" firstAttribute="top" secondItem="uec-Uy-11g" secondAttribute="bottom" constant="30" id="AdI-Pn-8H4"/>
                             <constraint firstItem="ZiM-eh-7Jl" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="30" id="JfZ-qv-Z1J"/>
                             <constraint firstItem="uec-Uy-11g" firstAttribute="trailing" secondItem="qhF-qX-EkF" secondAttribute="trailing" id="K7h-oc-zY6"/>
